Oauth (#7)
* Added Oauth methods

* Oauth changes
